--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "build": "webpack --config webpack/webpack.prod.js",
     "clean": "rimraf dist",
     "test": "npx jest",
-    "style": "prettier --write \"src/**/*.{ts,tsx}\""
+    "style": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "",
   "license": "MIT",
@@ -25,10 +27,24 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@storybook/addon-actions": "^7.6.12",
+    "@storybook/addon-essentials": "^7.6.12",
+    "@storybook/addon-interactions": "^7.6.12",
+    "@storybook/addon-links": "^7.6.12",
+    "@storybook/addon-mdx-gfm": "^7.6.12",
+    "@storybook/addon-styling-webpack": "^0.0.6",
+    "@storybook/react": "^7.6.12",
+    "@storybook/react-webpack5": "^7.6.12",
+    "@storybook/testing-library": "^0.2.2",
     "@types/chrome": "0.0.158",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.10.0",
     "glob": "^7.1.6",
@@ -38,6 +54,7 @@
     "postcss-preset-env": "^9.3.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2 ",
+    "storybook": "^7.6.12",
     "style-loader": "^3.3.4",
     "ts-jest": "^29.1.0",
     "ts-loader": "^8.0.0",
