--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "type": "git",
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
@@ -45,6 +46,7 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.6.7",
     "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.10.0",
