--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
 
-  "name": "Chrome Extension TypeScript Starter",
-  "description": "Chrome Extension, TypeScript, Visual Studio Code",
+  "name": "PSReader",
+  "description": "Chrome Extension for analyzing courses.",
   "version": "1.0",
 
   "options_ui": {
