--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,7 @@
-openai
-dotenv
 aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.5.0
+anyio==4.2.0
 async-timeout==4.0.3
 attrs==23.1.0
 blinker==1.6.2
@@ -14,14 +13,22 @@ click==8.1.7
 cloud-sql-python-connector==1.4.1
 cryptography==41.0.4
 dataclasses-json==0.5.14
+distro==1.9.0
+exceptiongroup==1.2.0
 Flask==2.3.3
 Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.0
+google-auth==2.27.0
+googleapis-common-protos==1.62.0
 grpc-google-iam-v1==0.12.6
 grpcio==1.58.0
 grpcio-status==1.58.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 idna==3.4
+importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
@@ -31,6 +38,7 @@ mypy-extensions==1.0.0
 mysql-connector-python==8.1.0
 numexpr==2.8.6
 numpy==1.25.2
+openai==1.11.0
 packaging==23.1
 proto-plus==1.22.3
 protobuf==4.21.12
@@ -41,15 +49,19 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 PyMySQL==1.1.0
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
 Shapely==1.8.5.post1
 six==1.16.0
+sniffio==1.3.0
 SQLAlchemy==2.0.20
 tenacity==8.2.3
+tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==1.26.16
 Werkzeug==2.3.7
 yarl==1.9.2
+zipp==3.17.0
